{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 97,
  "lineage": "6a5cad64-f769-a98c-80df-0a0e312bf2f2",
  "resources": [
    {
      "module": "module.linux",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "linux-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ff585585-cedc-4bd2-9275-17f382d071e9/resourceGroups/linux-Rg/providers/Microsoft.Network/networkInterfaces/n01605345-u-vm-nic-1",
            "internal_domain_name_suffix": "epjkfyxjbj3evdbz3tqhpwlaid.cwx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01605345-u-vm-ipconfig-1",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ff585585-cedc-4bd2-9275-17f382d071e9/resourceGroups/linux-Rg/providers/Microsoft.Network/publicIPAddresses/n01605345-u-vm-pip-2",
                "subnet_id": "/subscriptions/ff585585-cedc-4bd2-9275-17f382d071e9/resourceGroups/network-Rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1"
              }
            ],
            "location": "ukwest",
            "name": "n01605345-u-vm-nic-1",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "linux-Rg",
            "tags": {
              "ContactEmail": "n01605345@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform_Lab",
              "Project": "Practice"
            }
          },
          "dependencies": [
            "module.linux.azurerm_public_ip.linux-pip",
            "module.network.azurerm_subnet.subnet1",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.linux-Rg",
            "module.resource_group.azurerm_resource_group.network-Rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ff585585-cedc-4bd2-9275-17f382d071e9/resourceGroups/linux-Rg/providers/Microsoft.Network/networkInterfaces/n01605345-u-vm-nic-2",
            "internal_domain_name_suffix": "epjkfyxjbj3evdbz3tqhpwlaid.cwx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01605345-u-vm-ipconfig-2",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ff585585-cedc-4bd2-9275-17f382d071e9/resourceGroups/linux-Rg/providers/Microsoft.Network/publicIPAddresses/n01605345-u-vm-pip-1",
                "subnet_id": "/subscriptions/ff585585-cedc-4bd2-9275-17f382d071e9/resourceGroups/network-Rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1"
              }
            ],
            "location": "ukwest",
            "name": "n01605345-u-vm-nic-2",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "linux-Rg",
            "tags": {
              "ContactEmail": "n01605345@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform_Lab",
              "Project": "Practice"
            }
          },
          "dependencies": [
            "module.linux.azurerm_public_ip.linux-pip",
            "module.network.azurerm_subnet.subnet1",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.linux-Rg",
            "module.resource_group.azurerm_resource_group.network-Rg"
          ]
        }
      ]
    },
    {
      "module": "module.linux",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "linux-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01605345-u-vm-1",
            "fqdn": "n01605345-u-vm-1.ukwest.cloudapp.azure.com",
            "id": "/subscriptions/ff585585-cedc-4bd2-9275-17f382d071e9/resourceGroups/linux-Rg/providers/Microsoft.Network/publicIPAddresses/n01605345-u-vm-pip-1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "ukwest",
            "name": "n01605345-u-vm-pip-1",
            "resource_group_name": "linux-Rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "n01605345@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform_Lab",
              "Project": "Practice"
            }
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.linux-Rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01605345-u-vm-2",
            "fqdn": "n01605345-u-vm-2.ukwest.cloudapp.azure.com",
            "id": "/subscriptions/ff585585-cedc-4bd2-9275-17f382d071e9/resourceGroups/linux-Rg/providers/Microsoft.Network/publicIPAddresses/n01605345-u-vm-pip-2",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "ukwest",
            "name": "n01605345-u-vm-pip-2",
            "resource_group_name": "linux-Rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "n01605345@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform_Lab",
              "Project": "Practice"
            }
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.linux-Rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff585585-cedc-4bd2-9275-17f382d071e9/resourceGroups/network-Rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg1",
            "location": "ukwest",
            "name": "network-nsg1",
            "resource_group_name": "network-Rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_group.azurerm_resource_group.network-Rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff585585-cedc-4bd2-9275-17f382d071e9/resourceGroups/network-Rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg2",
            "location": "ukwest",
            "name": "network-nsg2",
            "resource_group_name": "network-Rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5985",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule2",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_group.azurerm_resource_group.network-Rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ff585585-cedc-4bd2-9275-17f382d071e9/resourceGroups/network-Rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1",
            "name": "network-subnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "network-Rg",
            "virtual_network_name": "network-vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.network-Rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ff585585-cedc-4bd2-9275-17f382d071e9/resourceGroups/network-Rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2",
            "name": "network-subnet2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "network-Rg",
            "virtual_network_name": "network-vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.network-Rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg1asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff585585-cedc-4bd2-9275-17f382d071e9/resourceGroups/network-Rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1",
            "network_security_group_id": "/subscriptions/ff585585-cedc-4bd2-9275-17f382d071e9/resourceGroups/network-Rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg1",
            "subnet_id": "/subscriptions/ff585585-cedc-4bd2-9275-17f382d071e9/resourceGroups/network-Rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg1",
            "module.network.azurerm_subnet.subnet1",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.network-Rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg2asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff585585-cedc-4bd2-9275-17f382d071e9/resourceGroups/network-Rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2",
            "network_security_group_id": "/subscriptions/ff585585-cedc-4bd2-9275-17f382d071e9/resourceGroups/network-Rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg2",
            "subnet_id": "/subscriptions/ff585585-cedc-4bd2-9275-17f382d071e9/resourceGroups/network-Rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg2",
            "module.network.azurerm_subnet.subnet2",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.network-Rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e2a2d223-0ae9-4a7a-8c39-ece077d96043",
            "id": "/subscriptions/ff585585-cedc-4bd2-9275-17f382d071e9/resourceGroups/network-Rg/providers/Microsoft.Network/virtualNetworks/network-vnet",
            "location": "ukwest",
            "name": "network-vnet",
            "resource_group_name": "network-Rg"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.network-Rg"
          ]
        }
      ]
    },
    {
      "module": "module.windows",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "windows-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "n01605112-w-vm1",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ff585585-cedc-4bd2-9275-17f382d071e9/resourceGroups/windows-Rg/providers/Microsoft.Network/networkInterfaces/n01605112-w-vm1-nic",
            "internal_domain_name_suffix": "epjkfyxjbj3evdbz3tqhpwlaid.cwx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01605112-w-vm1-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ff585585-cedc-4bd2-9275-17f382d071e9/resourceGroups/windows-Rg/providers/Microsoft.Network/publicIPAddresses/n01605112-w-vm1-pip",
                "subnet_id": "/subscriptions/ff585585-cedc-4bd2-9275-17f382d071e9/resourceGroups/network-Rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2"
              }
            ],
            "location": "ukwest",
            "name": "n01605112-w-vm1-nic",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "windows-Rg"
          },
          "dependencies": [
            "module.network.azurerm_subnet.subnet2",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.network-Rg",
            "module.resource_group.azurerm_resource_group.windows-Rg",
            "module.windows.azurerm_public_ip.windows-pip"
          ]
        },
        {
          "index_key": "n01605112-w-vm2",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ff585585-cedc-4bd2-9275-17f382d071e9/resourceGroups/windows-Rg/providers/Microsoft.Network/networkInterfaces/n01605112-w-vm2-nic",
            "internal_domain_name_suffix": "epjkfyxjbj3evdbz3tqhpwlaid.cwx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01605112-w-vm2-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ff585585-cedc-4bd2-9275-17f382d071e9/resourceGroups/windows-Rg/providers/Microsoft.Network/publicIPAddresses/n01605112-w-vm2-pip",
                "subnet_id": "/subscriptions/ff585585-cedc-4bd2-9275-17f382d071e9/resourceGroups/network-Rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2"
              }
            ],
            "location": "ukwest",
            "name": "n01605112-w-vm2-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "windows-Rg"
          },
          "dependencies": [
            "module.network.azurerm_subnet.subnet2",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.network-Rg",
            "module.resource_group.azurerm_resource_group.windows-Rg",
            "module.windows.azurerm_public_ip.windows-pip"
          ]
        }
      ]
    },
    {
      "module": "module.windows",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "windows-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "n01605112-w-vm1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01605112-w-vm1",
            "fqdn": "n01605112-w-vm1.ukwest.cloudapp.azure.com",
            "id": "/subscriptions/ff585585-cedc-4bd2-9275-17f382d071e9/resourceGroups/windows-Rg/providers/Microsoft.Network/publicIPAddresses/n01605112-w-vm1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "ukwest",
            "name": "n01605112-w-vm1-pip",
            "resource_group_name": "windows-Rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.windows-Rg"
          ]
        },
        {
          "index_key": "n01605112-w-vm2",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01605112-w-vm2",
            "fqdn": "n01605112-w-vm2.ukwest.cloudapp.azure.com",
            "id": "/subscriptions/ff585585-cedc-4bd2-9275-17f382d071e9/resourceGroups/windows-Rg/providers/Microsoft.Network/publicIPAddresses/n01605112-w-vm2-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "ukwest",
            "name": "n01605112-w-vm2-pip",
            "resource_group_name": "windows-Rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.windows-Rg"
          ]
        }
      ]
    }
  ]
}